# cognee_hackathon-

./: .gitignore
backend/: .env.template  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: cognee_setup.py  config.py
backend/app/services/: ingestion.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  IngestionPanel.tsx
