[project]
name = "codekeeper-backend"
version = "0.1.0"
description = "Backend service that builds and queries a knowledge graph over legacy codebases using Cognee"
requires-python = ">=3.11"
dependencies = [
    "cognee[codegraph]>=1.2.2",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "gitpython>=3.1.43",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"